fix use of wrong variable

--- a/src/experiments/matrix_profile.ipynb
+++ b/src/experiments/matrix_profile.ipynb
@@ -348,7 +348,7 @@
     }
    ],
    "source": [
-    "profile = mp.compute(gyroscope_data_frame['gyroscope_x'].to_numpy(), n_jobs=-1, windows=window_size)\n",
+    "profile = mp.compute(gyroscope_data_frame['gyroscope_x'].to_numpy(), n_jobs=-1, windows=windows)\n",
     "profile_motifs = mp.discover.motifs(profile, k=3)\n",
     "figures = mp.visualize(profile_motifs)\n"
    ],
@@ -404,7 +404,7 @@
     }
    ],
    "source": [
-    "profile = mp.compute(gyroscope_data_frame['gyroscope_y'].to_numpy(), n_jobs=-1, windows=window_size)\n",
+    "profile = mp.compute(gyroscope_data_frame['gyroscope_y'].to_numpy(), n_jobs=-1, windows=windows)\n",
     "profile_motifs = mp.discover.motifs(profile, k=3)\n",
     "figures = mp.visualize(profile_motifs)\n"
    ],
@@ -460,7 +460,7 @@
     }
    ],
    "source": [
-    "profile = mp.compute(gyroscope_data_frame['gyroscope_z'].to_numpy(), n_jobs=-1, windows=window_size)\n",
+    "profile = mp.compute(gyroscope_data_frame['gyroscope_z'].to_numpy(), n_jobs=-1, windows=windows)\n",
     "profile_motifs = mp.discover.motifs(profile, k=3)\n",
     "figures = mp.visualize(profile_motifs)"
    ],
