add pca for MPA

--- a/src/experiments/matrix_profile.ipynb
+++ b/src/experiments/matrix_profile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,6 +23,7 @@
     "import shared_constants\n",
     "from data_reading.phyphox import get_experiments, read_experiment\n",
     "from features import compute_and_visualize_motifs, motif_count_mean\n",
+    "from features._dimensionality_reduction import transform_data_using_pca\n",
     "%matplotlib inline\n",
     "\n",
     "\n",
@@ -44,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "                 acceleration_x  acceleration_y  acceleration_z  gyroscope_x  \\\n00:00:00.019897       -0.111406       -0.007795       -0.055800    -0.074131   \n00:00:00.029897       -0.094534       -0.001496        0.001651    -0.051417   \n00:00:00.039897        0.017864        0.008524        0.072816    -0.042856   \n00:00:00.049897        0.219101        0.022453        0.152936    -0.047786   \n00:00:00.059897        0.278157        0.054707        0.010240    -0.049217   \n...                         ...             ...             ...          ...   \n00:05:25.829897       -0.292311       -0.095448       -0.071085     0.068089   \n00:05:25.839897       -0.315940       -0.066380       -0.122576     0.125404   \n00:05:25.849897       -0.234664        0.001895       -0.508693     0.155209   \n00:05:25.859897        0.203716        0.102353       -0.283001     0.163361   \n00:05:25.869897        0.788348        0.215991        0.193258     0.162646   \n\n                 gyroscope_y  gyroscope_z  \n00:00:00.019897     0.114174     0.033573  \n00:00:00.029897     0.088783     0.003113  \n00:00:00.039897     0.054607    -0.007414  \n00:00:00.049897     0.012376     0.001423  \n00:00:00.059897    -0.010753     0.024552  \n...                      ...          ...  \n00:05:25.829897     0.154852    -0.002777  \n00:05:25.839897     0.048034    -0.007172  \n00:05:25.849897    -0.058786    -0.007176  \n00:05:25.859897    -0.140128     0.012407  \n00:05:25.869897    -0.211034     0.040011  \n\n[32586 rows x 6 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>acceleration_x</th>\n      <th>acceleration_y</th>\n      <th>acceleration_z</th>\n      <th>gyroscope_x</th>\n      <th>gyroscope_y</th>\n      <th>gyroscope_z</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>00:00:00.019897</th>\n      <td>-0.111406</td>\n      <td>-0.007795</td>\n      <td>-0.055800</td>\n      <td>-0.074131</td>\n      <td>0.114174</td>\n      <td>0.033573</td>\n    </tr>\n    <tr>\n      <th>00:00:00.029897</th>\n      <td>-0.094534</td>\n      <td>-0.001496</td>\n      <td>0.001651</td>\n      <td>-0.051417</td>\n      <td>0.088783</td>\n      <td>0.003113</td>\n    </tr>\n    <tr>\n      <th>00:00:00.039897</th>\n      <td>0.017864</td>\n      <td>0.008524</td>\n      <td>0.072816</td>\n      <td>-0.042856</td>\n      <td>0.054607</td>\n      <td>-0.007414</td>\n    </tr>\n    <tr>\n      <th>00:00:00.049897</th>\n      <td>0.219101</td>\n      <td>0.022453</td>\n      <td>0.152936</td>\n      <td>-0.047786</td>\n      <td>0.012376</td>\n      <td>0.001423</td>\n    </tr>\n    <tr>\n      <th>00:00:00.059897</th>\n      <td>0.278157</td>\n      <td>0.054707</td>\n      <td>0.010240</td>\n      <td>-0.049217</td>\n      <td>-0.010753</td>\n      <td>0.024552</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>00:05:25.829897</th>\n      <td>-0.292311</td>\n      <td>-0.095448</td>\n      <td>-0.071085</td>\n      <td>0.068089</td>\n      <td>0.154852</td>\n      <td>-0.002777</td>\n    </tr>\n    <tr>\n      <th>00:05:25.839897</th>\n      <td>-0.315940</td>\n      <td>-0.066380</td>\n      <td>-0.122576</td>\n      <td>0.125404</td>\n      <td>0.048034</td>\n      <td>-0.007172</td>\n    </tr>\n    <tr>\n      <th>00:05:25.849897</th>\n      <td>-0.234664</td>\n      <td>0.001895</td>\n      <td>-0.508693</td>\n      <td>0.155209</td>\n      <td>-0.058786</td>\n      <td>-0.007176</td>\n    </tr>\n    <tr>\n      <th>00:05:25.859897</th>\n      <td>0.203716</td>\n      <td>0.102353</td>\n      <td>-0.283001</td>\n      <td>0.163361</td>\n      <td>-0.140128</td>\n      <td>0.012407</td>\n    </tr>\n    <tr>\n      <th>00:05:25.869897</th>\n      <td>0.788348</td>\n      <td>0.215991</td>\n      <td>0.193258</td>\n      <td>0.162646</td>\n      <td>-0.211034</td>\n      <td>0.040011</td>\n    </tr>\n  </tbody>\n</table>\n<p>32586 rows × 6 columns</p>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -246,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
@@ -421,13 +422,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "12.0"
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -485,13 +486,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "11.333333333333334"
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -549,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -592,6 +593,55 @@
    "source": [
     "mean_coefficient_data_frame_all = pd.concat([gyroscope_data_frame,acceleration_data_frame], axis=1).apply(np.mean, axis=1).to_frame()\n",
     "profile_motifs = compute_and_visualize_motifs(mean_coefficient_data_frame_all[0].to_numpy(), windows=windows, k=5)\n",
+    "\n",
+    "print(\"Repeated pattern occurs {} times on average per motif\".format(motif_count_mean(profile_motifs)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### MPA on extracted PCAs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "negative dimensions are not allowed",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-15-0d3ba532ed5f>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0mdata_frame_pcas\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mtransform_data_using_pca\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdata_frame\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mn_components\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;36m2\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0mdata_frame_pcas\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 3\u001B[0;31m \u001B[0mprofile_motifs\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcompute_and_visualize_motifs\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdata_frame_pcas\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mwindows\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mwindows\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mk\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;36m5\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      4\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"Repeated pattern occurs {} times on average per motif\"\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mformat\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mmotif_count_mean\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mprofile_motifs\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/Documents/Uni/5_Master/Master Project/mp-mental-health-2020/src/features/_matrix_profile.py\u001B[0m in \u001B[0;36mcompute_and_visualize_motifs\u001B[0;34m(timeseries, windows, k)\u001B[0m\n\u001B[1;32m     17\u001B[0m     \"\"\"\n\u001B[1;32m     18\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 19\u001B[0;31m     \u001B[0mprofile\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mmp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcompute\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtimeseries\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mn_jobs\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m-\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mwindows\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mwindows\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     20\u001B[0m     \u001B[0mprofile_motifs\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mmp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mdiscover\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmotifs\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mprofile\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mk\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mk\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     21\u001B[0m     \u001B[0mmp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mvisualize\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mprofile_motifs\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/opt/anaconda3/envs/master-project/lib/python3.7/site-packages/matrixprofile/compute.py\u001B[0m in \u001B[0;36mcompute\u001B[0;34m(ts, windows, query, sample_pct, threshold, n_jobs)\u001B[0m\n\u001B[1;32m     94\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     95\u001B[0m         result = skimp(ts, windows=windows, sample_pct=1,\n\u001B[0;32m---> 96\u001B[0;31m             n_jobs=n_jobs)\n\u001B[0m\u001B[1;32m     97\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     98\u001B[0m     \u001B[0;31m# compute exact mp\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/opt/anaconda3/envs/master-project/lib/python3.7/site-packages/matrixprofile/algorithms/skimp.py\u001B[0m in \u001B[0;36mskimp\u001B[0;34m(ts, windows, show_progress, cross_correlation, pmp_obj, sample_pct, n_jobs)\u001B[0m\n\u001B[1;32m    206\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    207\u001B[0m         profile = mpx(ts, window_size, cross_correlation=cross_correlation,\n\u001B[0;32m--> 208\u001B[0;31m             n_jobs=n_jobs)\n\u001B[0m\u001B[1;32m    209\u001B[0m         \u001B[0mmp\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mprofile\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mget\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'mp'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    210\u001B[0m         \u001B[0mpi\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mprofile\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mget\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'pi'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/opt/anaconda3/envs/master-project/lib/python3.7/site-packages/matrixprofile/algorithms/mpx.py\u001B[0m in \u001B[0;36mmpx\u001B[0;34m(ts, w, query, cross_correlation, n_jobs)\u001B[0m\n\u001B[1;32m     72\u001B[0m             int(cross_correlation), n_jobs)\n\u001B[1;32m     73\u001B[0m     \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 74\u001B[0;31m         \u001B[0mmp\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmpi\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcympx_parallel\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mts\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mw\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcross_correlation\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mn_jobs\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     75\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     76\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32mmatrixprofile/algorithms/cympx.pyx\u001B[0m in \u001B[0;36mmatrixprofile.algorithms.cympx.mpx_parallel\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;32mmatrixprofile/algorithms/cympx.pyx\u001B[0m in \u001B[0;36mmatrixprofile.algorithms.cympx.mpx_parallel\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;32mmatrixprofile/cycore.pyx\u001B[0m in \u001B[0;36mmatrixprofile.cycore.muinvn\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;31mValueError\u001B[0m: negative dimensions are not allowed"
+     ]
+    }
+   ],
+   "source": [
+    "data_frame_pcas = transform_data_using_pca(data_frame, n_components=2)\n",
+    "data_frame_pcas\n",
+    "profile_motifs = compute_and_visualize_motifs(data_frame_pcas[1], windows=windows, k=5)\n",
     "\n",
     "print(\"Repeated pattern occurs {} times on average per motif\".format(motif_count_mean(profile_motifs)))"
    ],
