--- a/src/experiments/Supervised Classification.ipynb
+++ b/src/experiments/Supervised Classification.ipynb
@@ -30,24 +30,23 @@
     }
    ],
    "source": [
-    "from classification.classification import classify_all\n",
-    "from preprocessing._chunk_preparation import merge_left_and_right_chunk\n",
-    "from visualization import plot_duration_histogram\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import seaborn as sns\n",
-    "from data_reading.phyphox import read_experiment\n",
-    "from preprocessing._interpolation import align_data\n",
-    "from file_handling import get_sub_directories\n",
-    "from features._timeseries_feature_extraction import extract_timeseries_features\n",
-    "from preprocessing import segment_windows\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
+    "from tsfresh import select_features\n",
     "from tsfresh.utilities.dataframe_functions import impute\n",
-    "from tsfresh import select_features"
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "from classification.classification import classify_all\n",
+    "from data_reading.phyphox import read_experiment\n",
+    "from features import extract_timeseries_features\n",
+    "from file_handling import get_sub_directories\n",
+    "from preprocessing import align_data, segment_windows, merge_left_and_right_chunk\n",
+    "from visualization import plot_duration_histogram"
    ]
   },
   {
@@ -73,18 +72,18 @@
     "y_columns = [\"start\", \"end\", \"label\", \"hand\"]\n",
     "y = pd.DataFrame(columns=y_columns)\n",
     "#del experiment_dirs[1]\n",
-    "for dir in experiment_dirs:\n",
+    "for directory in experiment_dirs:\n",
     "    offsets = {}\n",
-    "    with open(dir + \"/offset.txt\") as f:\n",
+    "    with open(directory + \"/offset.txt\") as f:\n",
     "        for line in f:\n",
     "           (key, val) = line.split(\": \")\n",
     "           offsets[key] = val\n",
     "\n",
-    "    data_frames = read_experiment(dir, offsets=offsets)\n",
+    "    data_frames = read_experiment(directory, offsets=offsets)\n",
     "    data_frames = {key : align_data(data_frame, listening_rate=1000/sample_rate, reference_sensor=None) for key, data_frame in data_frames.items()}\n",
     "\n",
-    "    y_user = pd.read_csv(dir + \"/annotations.tsv\", delimiter=\"\\t\", header=None)\n",
-    "    hands = pd.read_csv(dir + \"/hands.tsv\", delimiter=\"\\t\", header=None)\n",
+    "    y_user = pd.read_csv(directory + \"/annotations.tsv\", delimiter=\"\\t\", header=None)\n",
+    "    hands = pd.read_csv(directory + \"/hands.tsv\", delimiter=\"\\t\", header=None)\n",
     "    y_user = y_user.iloc[:, [3,5,8]]\n",
     "    hands = hands.iloc[:, [8]]\n",
     "    y_user = pd.concat([y_user, hands], axis=1)\n",
@@ -623,11 +622,11 @@
      "evalue": "'data' must be pandas DataFrame object, not: <class 'numpy.ndarray'>",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-20-e829a039aa05>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0;31m# TODO: plot feature importance (which feature has the most impact on the results)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 3\u001B[0;31m \u001B[0msns\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpairplot\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mX_null_classification\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m:\u001B[0m\u001B[0;36m10\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      4\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/opt/anaconda3/envs/master-project/lib/python3.7/site-packages/seaborn/axisgrid.py\u001B[0m in \u001B[0;36mpairplot\u001B[0;34m(data, hue, hue_order, palette, vars, x_vars, y_vars, kind, diag_kind, markers, height, aspect, corner, dropna, plot_kws, diag_kws, grid_kws, size)\u001B[0m\n\u001B[1;32m   2074\u001B[0m         raise TypeError(\n\u001B[1;32m   2075\u001B[0m             \"'data' must be pandas DataFrame object, not: {typefound}\".format(\n\u001B[0;32m-> 2076\u001B[0;31m                 typefound=type(data)))\n\u001B[0m\u001B[1;32m   2077\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   2078\u001B[0m     \u001B[0mplot_kws\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;34m{\u001B[0m\u001B[0;34m}\u001B[0m \u001B[0;32mif\u001B[0m \u001B[0mplot_kws\u001B[0m \u001B[0;32mis\u001B[0m \u001B[0;32mNone\u001B[0m \u001B[0;32melse\u001B[0m \u001B[0mplot_kws\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcopy\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mTypeError\u001B[0m: 'data' must be pandas DataFrame object, not: <class 'numpy.ndarray'>"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-e829a039aa05>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# TODO: plot feature importance (which feature has the most impact on the results)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpairplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_null_classification\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/master-project/lib/python3.7/site-packages/seaborn/axisgrid.py\u001b[0m in \u001b[0;36mpairplot\u001b[0;34m(data, hue, hue_order, palette, vars, x_vars, y_vars, kind, diag_kind, markers, height, aspect, corner, dropna, plot_kws, diag_kws, grid_kws, size)\u001b[0m\n\u001b[1;32m   2074\u001b[0m         raise TypeError(\n\u001b[1;32m   2075\u001b[0m             \"'data' must be pandas DataFrame object, not: {typefound}\".format(\n\u001b[0;32m-> 2076\u001b[0;31m                 typefound=type(data)))\n\u001b[0m\u001b[1;32m   2077\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2078\u001b[0m     \u001b[0mplot_kws\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mplot_kws\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mplot_kws\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'data' must be pandas DataFrame object, not: <class 'numpy.ndarray'>"
      ]
     }
    ],
