--- a/src/experiments/Supervised Classification.ipynb
+++ b/src/experiments/Supervised Classification.ipynb
@@ -11,21 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Bad key \"text.kerning_factor\" on line 4 in\n",
-      "/Users/julio/opt/anaconda3/envs/master-project/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test_patch.mplstyle.\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "https://github.com/matplotlib/matplotlib/blob/v3.1.3/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -51,21 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/julio/Documents/Uni/5_Master/Master Project/mp-mental-health-2020/src/preprocessing/_data_frame.py:31: FutureWarning: Passing datetime64-dtype data to TimedeltaIndex is deprecated, will raise a TypeError in a future version\n",
-      "  time_delta_index = pd.TimedeltaIndex(timestamp_to_date, unit=output_timestamp_unit)\n"
-     ]
-    }
-   ],
+   "execution_count": 34,
+   "outputs": [],
    "source": [
-    "experiment_dir_path = \"../../data/phyphox/short recordings/\"\n",
+    "experiment_dir_path = \"../../data/phyphox/full recordings/\"\n",
     "experiment_dirs = get_sub_directories(experiment_dir_path)\n",
-    "\n",
+    "complete_experiments_indices = [1,2,3,5,7]\n",
+    "experiment_dirs = [experiment_dirs[i] for i in complete_experiments_indices]\n",
     "sample_rate = 50\n",
     "chunks = {\"right\": [], \"left\": []}\n",
     "null_chunks = {\"right\": [], \"left\": []}\n",
@@ -77,7 +65,7 @@
     "    with open(directory + \"/offset.txt\") as f:\n",
     "        for line in f:\n",
     "           (key, val) = line.split(\": \")\n",
-    "           offsets[key] = val\n",
+    "           offsets[key.lower()] = val\n",
     "\n",
     "    data_frames = read_experiment(directory, offsets=offsets)\n",
     "    data_frames = {key : align_data(data_frame, listening_rate=1000/sample_rate, reference_sensor=None) for key, data_frame in data_frames.items()}\n",
@@ -92,9 +80,24 @@
     "\n",
     "    # iterate over the annotations and split the timeseries in chunks\n",
     "    for key, df in data_frames.items():\n",
-    "        chunks[key] += [df.iloc[int(annotation[\"start\"]*sample_rate):int(annotation[\"end\"]*sample_rate)] for i, annotation in y_user.iterrows()]\n",
-    "        # null chunks are everything in between annotations\n",
-    "        null_chunks[key] += [df.iloc[int(annotation[\"end\"]*sample_rate):int(y_user.iloc[i+1:i+2][\"start\"]*sample_rate)] for i, annotation in y_user.iterrows() if i < len(y_user)-1]"
+    "        if key in chunks:\n",
+    "            chunks[key] += [df.iloc[int(annotation[\"start\"]*sample_rate):int(annotation[\"end\"]*sample_rate)] for i, annotation in y_user.iterrows()]\n",
+    "            # null chunks are everything in between annotations\n",
+    "            null_chunks[key] += [df.iloc[int(annotation[\"end\"]*sample_rate):int(y_user.iloc[i+1:i+2][\"start\"]*sample_rate)] for i, annotation in y_user.iterrows() if i < len(y_user)-1]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "experiment_dirs"
    ],
    "metadata": {
     "collapsed": false,
