adds TODO; adds further beacon information; formatting

--- a/src/experiments/Supervised Classification.ipynb
+++ b/src/experiments/Supervised Classification.ipynb
@@ -63,7 +63,7 @@
     }
    ],
    "source": [
-    "experiment_dir_path = \"../../data/phyphox/short recordings/\"\n",
+    "experiment_dir_path = \"../../data/phyphox/full recordings/\"\n",
     "experiment_dirs = get_sub_directories(experiment_dir_path)\n",
     "\n",
     "sample_rate = 50\n",
@@ -71,7 +71,7 @@
     "null_chunks = {\"right\": [], \"left\": []}\n",
     "y_columns = [\"start\", \"end\", \"label\", \"hand\"]\n",
     "y = pd.DataFrame(columns=y_columns)\n",
-    "#del experiment_dirs[1]\n",
+    "\n",
     "for directory in experiment_dirs:\n",
     "    offsets = {}\n",
     "    with open(directory + \"/offset.txt\") as f:\n",
@@ -94,7 +94,8 @@
     "    for key, df in data_frames.items():\n",
     "        chunks[key] += [df.iloc[int(annotation[\"start\"]*sample_rate):int(annotation[\"end\"]*sample_rate)] for i, annotation in y_user.iterrows()]\n",
     "        # null chunks are everything in between annotations\n",
-    "        null_chunks[key] += [df.iloc[int(annotation[\"end\"]*sample_rate):int(y_user.iloc[i+1:i+2][\"start\"]*sample_rate)] for i, annotation in y_user.iterrows() if i < len(y_user)-1]"
+    "        null_chunks[key] += [df.iloc[int(annotation[\"end\"]*sample_rate):int(y_user.iloc[i+1:i+2][\"start\"]*sample_rate)] for i, annotation in y_user.iterrows() if i < len(y_user)-1]\n",
+    "    print()"
    ],
    "metadata": {
     "collapsed": false,
@@ -841,6 +842,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
