--- a/src/experiments/Supervised Classification.ipynb
+++ b/src/experiments/Supervised Classification.ipynb
@@ -3,8 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Binary classification (OCD activities vs. null class)\n",
-    "\n",
+    "# Initializing and Preprocessing\n",
     "Load up experiment & annotations"
    ],
    "metadata": {
@@ -167,8 +166,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Classification step 1: OCD activities vs null class samples\n",
-    "\n",
     "### Segmentation"
    ],
    "metadata": {
@@ -213,6 +210,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Binary Classification: OCD activities vs null class samples\n",
     "### Feature extraction for OCD activities vs non-OCD activities"
    ],
    "metadata": {
