change configuration for usage of server folders; add pca and sne plots

--- a/src/experiments/Supervised Classification.ipynb
+++ b/src/experiments/Supervised Classification.ipynb
@@ -12,22 +12,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"//tmp/pycharm_project_688/\")\n",
-    "sys.path.append(\"//tmp/pycharm_project_688/src/\")\n",
+    "sys.path.append(\"/tmp/pycharm_project_XXX/\")\n",
+    "sys.path.append(\"/tmp/pycharm_project_XXX/src/\")\n",
     "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from tsfresh import select_features\n",
@@ -36,9 +42,6 @@
     "    preprocess_chunks_for_null_test_with_indoor\n",
     "from preprocessing._segmentation import segment_null_classification, segment_windows\n",
     "from visualization._visualization import swarm_plot_top_features\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
     "\n",
     "from classification.classification import classify_all\n",
     "from data_reading.phyphox import read_experiments_in_dir\n",
@@ -69,8 +72,6 @@
     "window_size = 50\n",
     "# MinimalFCParameters, ComprehensiveFCParameters, EfficientFCParameters\n",
     "feature_calculation_setting = MinimalFCParameters()\n",
-    "\n",
-    "complete_experiments_indices = [1,2,3,5,7]\n",
     "\n",
     "# Ana-2, Ariane, Julian, Wiki\n",
     "experiment_dirs_selected = [\"Ana-2\",\"Ariane\",\"Julian\",\"Wiktoria\"]\n",
@@ -725,7 +726,10 @@
     "### Feature selection for multi class OCD activities incl null"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -759,12 +763,44 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from visualization._visualization import pca_2d, sne_2d\n",
+    "pca_2d(X_multi_class_classification_scaled, labels_multi_class_classification, labels_multi_class_classification.unique()[0:16], ['C1','C2','C3','C4','C5','C6','C7','C8','C9','C10','C11','C12','C13','C14','C15','C16','C17','C18'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "sne_2d(X_multi_class_classification_scaled, labels_multi_class_classification, labels_multi_class_classification.unique(), ['C1','C2','C3','C4','C5','C6','C7','C8','C9','C10','C11','C12','C13','C14','C15','C16','C17','C18'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "### Train models and score results"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
