--- a/src/experiments/Supervised Classification.ipynb
+++ b/src/experiments/Supervised Classification.ipynb
@@ -15,9 +15,9 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"/tmp/pycharm_project_XXX/\")\n",
-    "sys.path.append(\"/tmp/pycharm_project_XXX/src/\")\n",
+    "#import sys\n",
+    "#sys.path.append(\"/tmp/pycharm_project_XXX/\")\n",
+    "#sys.path.append(\"/tmp/pycharm_project_XXX/src/\")\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
