fix true to use_indoor configuration variable

--- a/src/experiments/Supervised Classification.ipynb
+++ b/src/experiments/Supervised Classification.ipynb
@@ -243,7 +243,7 @@
    ],
    "source": [
     "\n",
-    "X_null_class_classification = extract_timeseries_features(null_classification_df, True, feature_set_config=feature_calculation_setting)"
+    "X_null_class_classification = extract_timeseries_features(null_classification_df, use_indoor=use_indoor, feature_set_config=feature_calculation_setting)"
    ],
    "metadata": {
     "collapsed": false,
