add selected activities

--- a/src/experiments/Null Class Detection PCA.ipynb
+++ b/src/experiments/Null Class Detection PCA.ipynb
@@ -63,7 +63,7 @@
     "import pandas as pd\n",
     "from classification.classification import classify_all\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from preprocessing._chunk_preparation import concat_chunks_for_feature_extraction, preprocess_chunks_for_null_test_with_indoor\n",
+    "from preprocessing._chunk_preparation import concat_chunks_for_feature_extraction, preprocess_chunks_for_null_test\n",
     "from preprocessing._segmentation import segment_for_null_classification\n",
     "from visualization._visualization import pca_null_clf\n",
     "\n",
@@ -92,7 +92,7 @@
     "selected_activities = [\"washing hands\", \"drying hands\"] # set to None if you want to classify between all activities\n",
     "\n",
     "chunks, null_chunks, _ = read_experiments_in_dir(experiment_dirs, sample_rate, drop_lin_acc=True, selected_activities=selected_activities)\n",
-    "chunks_ocd, chunks_null_class = preprocess_chunks_for_null_test_with_indoor(chunks, null_chunks)\n",
+    "chunks_ocd, chunks_null_class = preprocess_chunks_for_null_test(chunks, null_chunks,use_indoor=use_indoor)\n",
     "chunks_ocd_segmented, labels_ocd_segmented, chunks_null_segmented, labels_null_segmented = segment_for_null_classification(chunks_ocd, chunks_null_class, window_size)\n",
     "\n",
     "null_class_df, _ = concat_chunks_for_feature_extraction(\n",
