fix data files for Marvin and add activities to experiment folder path

--- a/src/experiments/Supervised Classification.ipynb
+++ b/src/experiments/Supervised Classification.ipynb
@@ -13,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-
    "outputs": [
     {
      "name": "stderr",
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# config:\n",
@@ -77,11 +76,11 @@
     "feature_calculation_setting = MinimalFCParameters()\n",
     "\n",
     "# Ana-2, Ariane, Julian, Wiki\n",
-    "experiment_dirs_selected = [\"Ana-2\",\"Ariane\",\"Julian\",\"Wiktoria\"]\n",
+    "experiment_dirs_selected = [\"Ana-2\", \"Anne\", \"Ariane\", \"Cilly\", \"Fabi\", \"Jonas\", \"Julian\", \"Julius\",\"Marvin\", \"Wiktoria\"]\n",
     "#experiment_dirs_selected = [\"Julius\"]\n",
     "experiment_dirs = [exp_dir for exp_dir in experiment_dirs if exp_dir.split(\"/\")[-1] in experiment_dirs_selected]\n",
     "\n",
-    "selected_activities = [\"washing hands\", \"drying hands\"] # set to None if you want to classify between all activities\n"
+    "selected_activities = None # set to None if you want to classify between all activities\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -104,10 +103,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/julio/Documents/Uni/5_Master/Master Project/mp-mental-health-2020/src/preprocessing/_data_frame.py:31: FutureWarning: Passing datetime64-dtype data to TimedeltaIndex is deprecated, will raise a TypeError in a future version\n",
+      "  time_delta_index = pd.TimedeltaIndex(timestamp_to_date, unit=output_timestamp_unit)\n",
+      "/Users/julio/opt/anaconda3/envs/master-project/lib/python3.7/site-packages/pandas/core/frame.py:4117: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  errors=errors,\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "chunks, null_chunks, y = read_experiments_in_dir(experiment_dirs, sample_rate, drop_lin_acc=True, selected_activities=selected_activities)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.4968513853904282"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(null_chunks[\"right\"]) / (len(chunks[\"right\"]) + len(null_chunks[\"right\"]))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "chunks, null_chunks, y = read_experiments_in_dir(experiment_dirs, sample_rate, drop_lin_acc=True, selected_activities=selected_activities)"
+    "len(chunks[\"right\"]) + len(null_chunks[\"right\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "y[\"label\"].value_counts()"
    ],
    "metadata": {
     "collapsed": false,
