--- a/src/experiments/Multiclass Classification 1 Handed.ipynb
+++ b/src/experiments/Multiclass Classification 1 Handed.ipynb
@@ -107,7 +107,10 @@
     "Preprocess data"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -263,7 +266,10 @@
     "### Feature extraction for multi class OCD activities incl null"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
